force-app/main/default/objects/Pricebook2/fields/Business_Type_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Business_Type_Attribute__c</fullName>
    <formula>TEXT(Business_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type Attribute</label>
    <type>Text</type>
</CustomField>