force-app/main/default/objects/Pricebook2/fields/BusinessTypeAttribute__c.field-meta.xml
<CustomField>
    <fullName>BusinessTypeAttribute__c</fullName>
    <formula>TEXT(BusinessType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type Attribute</label>
    <type>Text</type>
</CustomField>