force-app/main/default/objects/Pricebook2/fields/Country_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Country_Attribute__c</fullName>
    <formula>Text( Country_Code__c  )</formula>
    <label>Country Attribute</label>
    <type>Text</type>
</CustomField>