force-app/main/default/objects/Pricebook2/fields/CountryAttribute__c.field-meta.xml
<CustomField>
    <fullName>CountryAttribute__c</fullName>
    <formula>Text( CountryCode__c  )</formula>
    <label>Country Attribute</label>
    <type>Text</type>
</CustomField>