force-app/main/default/objects/Pricebook2/fields/Customer_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attribute__c</fullName>
    <formula>IF( NOT(ISNULL(Customer__r.AccountNumber)), Customer__r.AccountNumber,&quot;&quot;)</formula>
    <label>Customer Attribute OLD</label>
    <type>Text</type>
</CustomField>