force-app/main/default/objects/Pricebook2/fields/CustomerAttribute__c.field-meta.xml
<CustomField>
    <fullName>CustomerAttribute__c</fullName>
    <formula>IF( NOT(ISNULL(Customer__r.AccountNumber)), Customer__r.AccountNumber,&quot;&quot;)</formula>
    <label>Customer Attribute</label>
    <type>Text</type>
</CustomField>