force-app/main/default/objects/Pricebook2/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date when Prices Expire</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>