force-app/main/default/objects/Pricebook2/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Date when Prices Expire</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>