force-app/main/default/objects/Pricebook2/fields/IsPriceList__c.field-meta.xml
<CustomField>
    <fullName>IsPriceList__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsPriceList</label>
    <type>Checkbox</type>
</CustomField>