force-app/main/default/objects/Pricebook2/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Pricebooks (Office)</relationshipLabel>
    <relationshipName>Pricebooks</relationshipName>
    <type>Lookup</type>
</CustomField>