force-app/main/default/objects/Pricebook2/fields/Organization_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Organization_Attribute__c</fullName>
    <formula>TEXT(Organization__c )</formula>
    <label>Organization Attribute</label>
    <type>Text</type>
</CustomField>