force-app/main/default/objects/Pricebook2/fields/Pricebook_Code__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Code__c</fullName>
    <formula>IF (ISNULL(Organization_Attribute__c),&quot;&quot;,(Organization_Attribute__c)+&quot; &quot;)
+IF (ISNULL(Country_Attribute__c),&quot;&quot;,(Country_Attribute__c)+&quot; &quot;)
+IF (ISNULL(Territory_Attribute__c),&quot;&quot;,(Territory_Attribute__c)+&quot; &quot;)
+IF (ISNULL(Profit_Center_Attribute__c),&quot;&quot;,(Profit_Center_Attribute__c)+&quot; &quot;) 
+IF (ISNULL(Business_Type_Attribute__c),&quot;&quot;,(Business_Type_Attribute__c)+&quot; &quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Code</label>
    <type>Text</type>
</CustomField>