force-app/main/default/objects/Pricebook2/fields/Profit_Center__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center__c</fullName>
    <label>Profit Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lumon_Profit_Centers</valueSetName>
    </valueSet>
</CustomField>