force-app/main/default/objects/Pricebook2/fields/Profit_Center_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Profit_Center_Attribute__c</fullName>
    <formula>TEXT(Profit_Center__c)</formula>
    <label>Profit Center Attribute</label>
    <type>Text</type>
</CustomField>