force-app/main/default/objects/Pricebook2/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date when Prices are Valid</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>