force-app/main/default/objects/Pricebook2/fields/Territory_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Territory_Attribute__c</fullName>
    <formula>TEXT(Territory__c )</formula>
    <label>Territory Attribute</label>
    <type>Text</type>
</CustomField>