force-app/main/default/objects/Pricebook2/validationRules/End_Data_is_Later_than_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Data_is_Later_than_Start</fullName>
    <active>true</active>
    <errorConditionFormula>(Start_Date__c &gt;=  End_Date__c )</errorConditionFormula>
    <errorMessage>End Date Must be Later than the Start Date</errorMessage>
</ValidationRule>