force-app/main/default/objects/Pricebook2/listViews/All_Price_Books_with_Attributes.listView-meta.xml
<ListView>
    <fullName>All_Price_Books_with_Attributes</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>PRICEBOOK2.DESCRIPTION</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>Validity__c</columns>
    <columns>Customer_Attribute__c</columns>
    <columns>Business_Type_Attribute__c</columns>
    <columns>Organization_Attribute__c</columns>
    <columns>Profit_Center_Attribute__c</columns>
    <columns>Country_Attribute__c</columns>
    <columns>Territory_Attribute__c</columns>
    <columns>Pricebook_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Books with Attributes</label>
</ListView>